--- a/yaml/cpu/servingruntime.yaml
+++ b/yaml/cpu/servingruntime.yaml
@@ -19,9 +19,9 @@ spec:
     - name: kserve-container
       image: ghcr.io/ggml-org/llama.cpp:server
       args:
-        --port=8080
-        --model=/mnt/models
-        --served-model-name={{.Name}}                                       
+        - --port=8080
+        - --model=/mnt/models
+        - --served-model-name={{.Name}}                                       
       command:
         - "llama-server"
         - "-m"        
