--- a/yaml/cpu/servingruntime.yaml
+++ b/yaml/cpu/servingruntime.yaml
@@ -19,10 +19,8 @@ spec:
     - name: kserve-container
       image: ghcr.io/ggml-org/llama.cpp:server
       args:
-        - -m
-        - --/mnt/models
-        - --port=8080
-        - --served-model-name={{.Name}}
+        - --port
+        - '8080'
       ports:
         - name: http1
           containerPort: 8080
